# text-gleaner

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
examples/fidelity-brokerage-statement/: README.md  activity_schema.json  description.yaml  extract_transactions.py  generate_schema.py
pdfetch/: cli.py  config.py  extractor.py  llm_client.py  pdf_reader.py  schema_generator.py  utils.py
tests/: test_config.py  test_extractor.py  test_pdf_reader.py  test_reporter.py  test_schema_generator.py  test_schema_refiner.py
textgleaner/: __init__.py  cli.py  config.py  extractor.py  llm_client.py  reporter.py  schema_generator.py  schema_refiner.py
