[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textgleaner"
version = "1.1.0"
description = "Structured data extraction from plain-text documents using local LLM tool calls"
authors = [{ name = "Lyutenant" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "extraction", "ollama", "nlp", "text", "structured-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Lyutenant/text-gleaner"
Repository = "https://github.com/Lyutenant/text-gleaner"
Issues = "https://github.com/Lyutenant/text-gleaner/issues"

[project.scripts]
textgleaner = "textgleaner.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["textgleaner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
